[package]
name = "obss_log"
version = "0.2.0"
edition = "2021"
authors = ["Dima Kuzmin"]

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
regex = "1.11.1"
chrono = "0.4.40"
jwalk = "0.8.1"
hostname = "0.4.0"
xml-rs = "0.8.25"
sentry = "0.36.0"
rev_buf_reader = "0.3.0"
openssl = { version = "0.10.71", features = ["vendored"] }
rand = "0.9.0"
#postgres = "0.19.9"

[profile.release]
opt-level = 3
